--- a/sections/image-with-text.liquid
+++ b/sections/image-with-text.liquid
@@ -1,14 +1,13 @@
-{% stylesheet %}
+{%- assign image_width = 1024 -%}
+
+{%- style -%}
 .image-text-left .image-text-asset {
   order: -1;
 }
-{% endstylesheet %}
-
-<style>
 {{ section.id | prepend: '#' }}.section-wrap:before {
   background-color:{{ section.settings.background | default: '#ffffff' }}
 }
-</style>
+{%- endstyle -%}
 
 <div id="{{ section.id }}" class="section-wrap"
   style="color:{{ section.settings.color | default:'inherit' }};">
@@ -42,8 +41,9 @@
             width:100%; height:100%; object-fit: {{ section.settings.object_fit }}; object-position: {{ section.settings.object_position }}; aspect-ratio: {{ section.settings.aspect_ratio }}
             {% endcapture %}
             {% assign image = section.settings.image %}
-            <img src="{{image | image_url: width: 1024 }}"
-              width="{{ image.width }}" height="{{ image.height }}"
+            <img src="{{ image | image_url: width: image_width }}"
+              width="{{ image_width }}"
+              height="{{ image_width | divided_by: image.aspect_ratio | ceil }}"
               alt="{{ image.alt }}"
               style="{{- image_sizes -}}"
               loading="lazy">
@@ -134,12 +134,12 @@
           "label": "1:1 (Square)"
         },
         {
-          "value": "3/2",
-          "label": "3:2 (Portrait)"
+          "value": "2/3",
+          "label": "2:3 (Portrait)"
         },
         {
-          "value": "5/4",
-          "label": "5:4 (Portrait)"
+          "value": "4/5",
+          "label": "4:5 (Portrait)"
         },
         {
           "value": "4/3",
