--- a/assets/theme.css
+++ b/assets/theme.css
@@ -15,6 +15,9 @@ is yours! :)
   --bold: 900;
   --border: 2px solid var(--black);
   --shading: repeating-linear-gradient(45deg, white, white 2px, black 1px, black 3px);
+
+  --shopify-accelerated-checkout-button-block-size: 44px;
+  --shopify-accelerated-checkout-button-border-radius: 5px;
 }
 
 * {
@@ -348,6 +351,24 @@ button + button,
 }
 .button-small {
   padding: 8px;
+}
+.button-stretch {
+  width: 100%;
+}
+
+/* Shopify dynamic checkout buttons */
+main#main-content .shopify-payment-button__button--unbranded {
+  font-family: var(--font-stack);
+  font-size: 1rem;
+  font-weight: 600;
+  background-color: var(--black);
+  text-transform: uppercase;
+}
+main#main-content .shopify-payment-button__button--unbranded:hover {
+  background-color: var(--white);
+  color: var(--black);
+  box-shadow: inset 0 0 0 2px var(--black);
+  font-weight: 600;
 }
 
 /* Typography */
