--- a/assets/theme.css
+++ b/assets/theme.css
@@ -345,7 +345,7 @@ table tbody tr:nth-child(even) td {
 }
 
 /* Buttons */
-main button:not([class*="input-stepper"]),
+main button:not([class*="input-stepper"]):not([data-index]),
 .button {
   font-family: var(--font-stack);
   font-size: 1rem;
@@ -374,7 +374,7 @@ main button.button-white,
   box-shadow: inset 0 0 0 2px var(--black);
   font-weight: 600;
 }
-main button:not([class*="input-stepper"]):before,
+main button:not([class*="input-stepper"]):not([data-index]):before,
 .button:before {
   content: "";
   background-image: var(--shading);
