--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -55,6 +55,15 @@ var default_image = {{ product.featured_image.id | default: 'null' }};
               {%- when '@app' -%}
                 {% render block %}
 
+              {%- when "cart" -%}
+                <div id="product-cart">
+                  {%- render 'product-cart',
+                    form: form,
+                    block: block,
+                    current_variant: current_variant
+                  -%}
+                </div>
+
               {%- when 'title' -%}
                 <h1 data-title="{{- block.settings.title -}}">
                   {{- block.settings.title -}}
@@ -65,107 +74,6 @@ var default_image = {{ product.featured_image.id | default: 'null' }};
                   {{ block.settings.label }}
                   <span class="js--variant-sku">{{ current_variant.sku }}</span>
                 </p>
-
-              {%- when 'prices' -%}
-                <p class="large-text">
-                  <strike class="js--variant-compareatprice">
-                    {%- if current_variant.compare_at_price > current_variant.price -%}
-                      {{- current_variant.compare_at_price | money -}}
-                    {%- endif -%}
-                  </strike>
-                  <strong class="js--variant-price">
-                    {{ current_variant.price | money }}
-                  </strong>
-                </p>
-
-              {%- when 'options' %}
-                {% unless product.has_only_default_variant %}
-                  {% for option_group in product.options_with_values %}
-                    {% assign option_field = option_group.position | prepend: 'option' %}
-                    <div class="form-row">
-                      <fieldset class="variant-options js--variant-options {{ option_field }} flex align-left wrap">
-                        <legend>{{ option_group.name | prepend: 'Select ' }}</legend>
-                        {% for value in option_group.values %}
-                          {% capture option_id %}{{ option_group.name }}_{{ value }}{% endcapture %}
-                          {% assign this_variant = product.variants | where: option_field, value | first %}
-                          <div class="variant-option">
-                            <input type="radio"
-                              id="{{ option_id | handleize }}"
-                              class="js--variant-option"
-                              name="{{ option_group.position | prepend: 'option'}}"
-                              value="{{ value }}"
-                              {% if current_variant[option_field] == value %}checked{% endif %}>
-                              <label for="{{ option_id | handleize }}">
-                                {% unless this_variant.featured_image == blank %}
-                                  {% unless variant_images_list contains this_variant.featured_image.id %}
-                                    <img src="{{ this_variant.featured_image | image_url: width: 75, height: 75 }}"
-                                    width="50"
-                                    height="50"
-                                    data-index="{{- this_variant.featured_image.id -}}"
-                                    loading="lazy">
-                                    {% endunless %}
-                                {% endunless %}
-                                {{- value -}}
-                              </label>
-                          </div>
-                          {%- comment -%}
-                          Only display the variant image for the first occurrence.
-                          {%- endcomment -%}
-                          {%- capture variant_images_list -%}
-                            {{- variant_images_list -}}
-                            {%- unless variant_images_list contains this_variant.featured_image.id -%}
-                              {%- unless variant_images_list == blank -%},{%- endunless -%}
-                              {{- this_variant.featured_image.id -}}
-                            {%- endunless -%}
-                          {%- endcapture -%}
-                        {% endfor %}
-                      </fieldset>
-                    </div>
-                  {% endfor %}
-                {% endunless %}
-
-              {%- when 'button' -%}
-                {%- if block.settings.show_quantity == true -%}
-                  <div class="form-row">
-                    <div class="flex middle">
-                      <span class="form-legend nomargin">Quantity</span>
-                      <div>
-                        <div class="input-stepper">
-                          <button type="button" class="input-stepper_decrease">
-                            <span>−</span>
-                          </button>
-                          <input type="number"
-                            class="input-stepper_number quantity__input"
-                            name="quantity"
-                            value="1"
-                            min="1"
-                            max="20">
-                          <button type="button" class="input-stepper_increase">
-                            <span>+</span>
-                          </button>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                {%- endif -%}
-                <div class="form-row">
-                  <input type="hidden"
-                    id="js--variant-id"
-                    name="id"
-                    value="{{ current_variant.id }}">
-                  {% if current_variant.available == true %}
-                    <button type="submit" id="js--addtocart" class="button button-stretch">
-                      {{ block.settings.button_label }}
-                    </button>
-                  {% else %}
-                    <button type="submit" id="js--addtocart" class="button" disabled>Unavailable</button>
-                  {% endif %}
-                </div>
-                {%- if block.settings.show_accelerated_checkout_buttons == true -%}
-                  <div class="form-row dynamic_checkout_buttons">
-                    {{ form | payment_button }}
-                  </div>
-                {%- endif -%}
 
               {%- when 'text' -%}
                 <div class="rte">
@@ -331,19 +239,8 @@ function goToImage(index, container=false) {
       ]
     },
     {
-      "type": "options",
-      "name": "Product options",
-      "limit": 1,
-      "settings":[]
-    },
-    {
-      "type": "prices",
-      "name": "Prices",
-      "settings":[]
-    },
-    {
-      "type": "button",
-      "name": "Add to cart",
+      "type": "cart",
+      "name": "Cart",
       "limit": 1,
       "settings": [
         {
