Excluded breadcrumb from cart and blog index templates.

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -46,7 +46,7 @@
   {% sections 'header-group' %}
 
   {% liquid
-  unless template == "index"
+  unless template == "index" or template == "cart" or template == "blog"
     render 'breadcrumb'
   endunless
   %}
