--- a/assets/mobile.css
+++ b/assets/mobile.css
@@ -3,6 +3,9 @@ Add your mobile specific theme styles here. You can do whatever you like to
 whatever's already in here: trash all of it, keep bits of it, modify it,
 improve it...the choice is yours! :)
 */
+:root {
+  --column-section-gap: 2rem;
+}
 
 body [data-device="desktop"] {
   display: none;
@@ -204,4 +207,33 @@ main#main-content .image-banner-content {
 #predictive-search-results h3 {
   margin-left: 0.75rem;
   margin-right: 0.75rem;
+}
+
+/* Swipeable section on mobile */
+main#main-content .scrolly {
+  display: flex;
+  width: calc(100vw + 0.5rem);
+  overflow-x: auto;
+  scroll-snap-type: x proximity;
+  scroll-behavior: smooth;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+  margin-left: calc((var(--default-gap) / 2) * -1);
+  padding-left: var(--default-gap);
+  padding-right: calc(var(--default-gap) / 2);
+  padding-top: var(--default-gap);
+  padding-bottom: var(--default-gap);
+  gap: calc(var(--column-section-gap));
+  &::-webkit-scrollbar {
+    display: none;
+  }
+  &.flex {
+    flex-wrap: nowrap;
+    align-items: stretch;
+    gap: calc(var(--column-section-gap) * 2);
+  }
+  & > * {
+    scroll-snap-align: center;
+    flex: 1 0 calc(50vw + var(--column-section-gap));
+  }
 }
