--- a/sections/raw-html-with-text.liquid
+++ b/sections/raw-html-with-text.liquid
@@ -9,6 +9,12 @@
 
 <div id="{{ section.id }}" class="section-wrap" style="color:{{ section.settings.color | default:'inherit' }};">
   <div class="section">
+    {% if section.settings.show_heading == true %}
+      <{{ section.settings.size }} data-title="{{ section.settings.text }}">
+        {{ section.settings.text }}
+      </{{ section.settings.size }}>
+    {% endif %}
+
     <div class="grid-2 middle html-text-{{ section.settings.html_position }}">
       <!-- content -->
       <div class="html-text-content">
@@ -50,6 +56,44 @@
     {
       "type": "header",
       "content": "Section Settings"
+    },
+    {
+      "type": "header",
+      "content": "Section Settings"
+    },
+    {
+      "type": "checkbox",
+      "id": "show_heading",
+      "label": "Show heading",
+      "default": false
+    },
+    {
+      "visible_if": "{{ section.settings.show_heading == true }}",
+      "type": "inline_richtext",
+      "id": "text",
+      "label": "Heading",
+      "default": "Headline",
+    },
+    {
+      "visible_if": "{{ section.settings.show_heading == true }}",
+      "type": "select",
+      "id": "size",
+      "label": "Heading Size",
+      "options": [
+        {
+          "value": "h1",
+          "label": "H1"
+        },
+        {
+          "value": "h2",
+          "label": "H2"
+        },
+        {
+          "value": "h3",
+          "label": "H3"
+        }
+      ],
+      "default": "h2"
     },
     {
       "type": "liquid",
