--- a/sections/articles-grid.liquid
+++ b/sections/articles-grid.liquid
@@ -1,19 +1,19 @@
-<style>
+{%- style -%}
 {{ section.id | prepend: '#' }}.section-wrap:before {
   background-color:{{ section.settings.background | default: '#ffffff' }}
 }
 {{ section.id | prepend: '#' }} .articles-grid {
   grid-template-columns: repeat({{ section.settings.articles_per_row }}, 1fr);
 }
-</style>
+{%- endstyle -%}
 
 <div id="{{ section.id }}" class="section-wrap" style="color:{{ section.settings.color | default:'inherit' }};">
   <div class="section">
-    {% unless section.settings.text == blank %}
+    {%- if section.settings.show_heading == true -%}
       <{{ section.settings.size }} data-title="{{ section.settings.text }}">
         {{ section.settings.text }}
       </{{ section.settings.size }}>
-    {% endunless %}
+    {%- endif -%}
 
     {% assign blog_handle = section.settings.blog | default: "news" %}
 
@@ -42,12 +42,24 @@
   ],
   "settings": [
     {
+      "type": "header",
+      "content": "Section Settings"
+    },
+    {
+      "type": "checkbox",
+      "id": "show_heading",
+      "label": "Show heading",
+      "default": true
+    },
+    {
+      "visible_if": "{{ section.settings.show_heading == true }}",
       "type": "inline_richtext",
       "id": "text",
       "label": "Heading",
       "default": "Headline",
     },
     {
+      "visible_if": "{{ section.settings.show_heading == true }}",
       "type": "select",
       "id": "size",
       "label": "Heading Size",
@@ -91,10 +103,6 @@
       "max": 4,
       "step": 1,
       "default": 3
-    },
-    {
-      "type": "header",
-      "content": "Section Settings"
     },
     {
       "type": "color",
