--- a/sections/multicolumn.liquid
+++ b/sections/multicolumn.liquid
@@ -17,6 +17,15 @@ assign columns = section.blocks.size
 {% endstyle %}
 
 <div id="{{ section.id }}" class="section-wrap" style="color:{{ section.settings.color | default:'inherit' }};">
+
+  {%- if section.settings.show_heading == true -%}
+    <div class="section">
+      <{{ section.settings.size }} data-title="{{ section.settings.text }}">
+        {{ section.settings.text }}
+      </{{ section.settings.size }}>
+    </div>
+  {%- endif -%}
+
   <div class="section column-section{% if section.settings.swipe_on_mobile == true %} scrolly{% endif %}">
     {% for block in section.blocks %}
       {% assign image_height = image_width | divided_by: block.settings.image.aspect_ratio | ceil %}
@@ -95,6 +104,40 @@ assign columns = section.blocks.size
     {
       "type": "header",
       "content": "Section Settings"
+    },
+    {
+      "type": "checkbox",
+      "id": "show_heading",
+      "label": "Show heading",
+      "default": false
+    },
+    {
+      "visible_if": "{{ section.settings.show_heading == true }}",
+      "type": "inline_richtext",
+      "id": "text",
+      "label": "Heading",
+      "default": "Headline",
+    },
+    {
+      "visible_if": "{{ section.settings.show_heading == true }}",
+      "type": "select",
+      "id": "size",
+      "label": "Heading Size",
+      "options": [
+        {
+          "value": "h1",
+          "label": "H1"
+        },
+        {
+          "value": "h2",
+          "label": "H2"
+        },
+        {
+          "value": "h3",
+          "label": "H3"
+        }
+      ],
+      "default": "h2"
     },
     {
       "type": "color",
